<?xml version="1.0" encoding="utf-8"?>

<!--
~ Copyright 2014 Lukasz Skalski <lukasz.skalski@op.pl>
~
~ WebSocketsClient is free software: you can redistribute it and/or modify
~ it under the terms of the GNU General Public License as published by
~ the Free Software Foundation, either version 3 of the License, or
~ (at your option) any later version.
~
~ WebSocketsClient is distributed in the hope that it will be useful,
~ but WITHOUT ANY WARRANTY; without even the implied warranty of
~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
~ GNU General Public License for more details.
~
~ You should have received a copy of the GNU General Public License
~ along with WebSocketsClient.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>

    <!-- General -->

    <string name="app_name">"WebSocketsClient"</string>
    <string name="action_settings">"Settings"</string>
    <string name="action_licenses">"Open Source Licenses"</string>

    <!-- Main -->

    <string name="main_txt_1">"Host Name or IP Address"</string>
    <string name="main_txt_2">"Port"</string>
    <string name="main_txt_3">"Timeout [ms]"</string>
    <string name="main_txt_4">"Connection Established"</string>
    <string name="main_txt_5">"Connection Error - try again"</string>
    <string name="main_txt_6">"Connect"</string>
    <string name="main_txt_7">"Enter command here"</string>

    <string name="info_msg_1">"Invalid connection settings"</string>
    <string name="info_msg_2">"No connection to the server"</string>
    <string name="info_msg_3">"To exit press the 'Exit'"</string>
    <string name="info_msg_4">"Received invalid JSON from server"</string>

    <!-- Settings -->

    <string name="settings_msg_1">"Notifications"</string>
    <string name="settings_msg_2">"Disable notifications"</string>
    <string name="settings_msg_3">"Disable all notifications from server"</string>
    <string name="settings_msg_4">"Disable multiple notifications"</string>
    <string name="settings_msg_5">"Show only the last received notification"</string>

</resources>