<?xml version="1.0" encoding="UTF-8"?>

<!--
~ Copyright 2014 Lukasz Skalski <lukasz.skalski@op.pl>
~
~ WebSocketsClient is free software: you can redistribute it and/or modify
~ it under the terms of the GNU General Public License as published by
~ the Free Software Foundation, either version 3 of the License, or
~ (at your option) any later version.
~
~ WebSocketsClient is distributed in the hope that it will be useful,
~ but WITHOUT ANY WARRANTY; without even the implied warranty of
~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
~ GNU General Public License for more details.
~
~ You should have received a copy of the GNU General Public License
~ along with WebSocketsClient.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_msg_1">

        <CheckBoxPreference
            android:title="@string/settings_msg_2"
            android:summary="@string/settings_msg_3"
            android:key="disable_notifications"/>

        <CheckBoxPreference
            android:title="@string/settings_msg_4"
            android:summary="@string/settings_msg_5"
            android:key="disable_multiple_notifications"/>

    </PreferenceCategory>

</PreferenceScreen>