<?xml version="1.0" encoding="utf-8"?>

<!--
~ Copyright 2014 Lukasz Skalski <lukasz.skalski@op.pl>
~
~ WebSocketsClient is free software: you can redistribute it and/or modify
~ it under the terms of the GNU General Public License as published by
~ the Free Software Foundation, either version 3 of the License, or
~ (at your option) any later version.
~
~ WebSocketsClient is distributed in the hope that it will be useful,
~ but WITHOUT ANY WARRANTY; without even the implied warranty of
~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
~ GNU General Public License for more details.
~
~ You should have received a copy of the GNU General Public License
~ along with WebSocketsClient.  If not, see <http://www.gnu.org/licenses/>.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".ActivityMain">

    <EditText
        android:id="@+id/hostname"
        android:hint="@string/main_txt_1"
        android:background="@drawable/corners_top"
        android:padding="8dp"
        android:singleLine="true"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/port"
        android:hint="@string/main_txt_2"
        android:background="@drawable/corners_center"
        android:padding="8dp"
        android:singleLine="true"
        android:inputType="number"
        android:layout_below="@+id/hostname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/timeout"
        android:hint="@string/main_txt_3"
        android:background="@drawable/corners_bottom"
        android:padding="8dp"
        android:singleLine="true"
        android:inputType="number"
        android:layout_below="@+id/port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <com.dd.CircularProgressButton
        android:id="@+id/btnConnect"
        android:layout_below="@+id/timeout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cpb_textComplete="@string/main_txt_4"
        app:cpb_textError="@string/main_txt_5"
        app:cpb_textIdle="@string/main_txt_6"
        app:cpb_cornerRadius="12dp" />

    <TextView
        android:id="@+id/cmdOutput"
        android:ems="10"
        android:padding="8dp"
        android:gravity="bottom"
        android:background="@drawable/corners_top"
        android:layout_above="@+id/cmdInput"
        android:layout_below="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/cmdInput"
        android:hint="@string/main_txt_7"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:padding="8dp"
        android:background="@drawable/corners_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>